--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -40,7 +40,7 @@
           - me-2 → margen a la derecha (spacing entre botones).
       -->
       <button class="btn kawaii-btn me-2" (click)="goToDiary()">✍️ Your profile page</button>
-      <button class="btn kawaii-btn me-2" (click)="goToPosts()">📸 See your own posts</button>
+      <button class="btn kawaii-btn me-2" (click)="goToPosts()">📸 See all  posts</button>
     </div>
 
     <!-- <div class="text-center mt-4">
