--- a/src/app/pages/postWall/posts-wall.html
+++ b/src/app/pages/postWall/posts-wall.html
@@ -7,13 +7,14 @@
 
   <div class="post-card">
     <div class="post-header">
-      <div [innerHTML]="getImagesofUsers()"></div>
+      <div [innerHTML]="userInformation"></div>
     </div>
      </div>
      
 </div>
 
     
+
     <!-- <p>{{textIMG()}}</p> -->
     <!-- <img  [src]="imageURL()" alt="Imagen del post" /> -->
 
